# devchallenge-_21

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.cargo/: config.toml
src/: ai_config.rs  errors.rs  main.rs
src/api/: call.rs  category.rs  mod.rs  models.rs  utils.rs
src/db/: mod.rs  schema.sql
