[package]
name = "devchallenge"
version = "0.1.0"
edition = "2021"

[profile.release]
incremental = true

[dependencies]
actix-web = "4.9.0"
env_logger = "0.11.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate","json", "uuid"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"]}
actix-files = "0.6.6"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
anyhow = "1.0.89"
simple_transcribe_rs = "1.0.3"
rust-bert = {version="0.22.0", features=["tokenizers", "download-libtorch"]}
thiserror = "1.0.48"

